--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PZ'
 - !lcsh 'Camp Fire Girls -- Juvenile fiction'
+- GITenberg
 title: The Camp Fire Girls in the Maine Woods; Or, The Winnebagos Go Camping
 url: http://www.gutenberg.org/ebooks/18606
